# ProjectOps

./: .env.example  .gitignore  CONTEXT.md  README.md  docker-compose.yml
.claude/: launch.json
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_projects.py  0002_create_repo_integrations.py  0003_create_repo_analyses.py  0004_create_health_checks.py  0005_create_readiness_tables.py
backend/app/: __init__.py  main.py  readiness_catalog.py
backend/app/api/: health.py  projects.py  readiness.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  health_check.py  project.py  readiness.py  repo_analysis.py  repo_integration.py
backend/app/repositories/: health_checks.py  projects.py  readiness.py  repo_analyses.py  repo_integrations.py
backend/app/schemas/: __init__.py  dashboard.py  health_check.py  project.py  readiness.py  repo_analysis.py  repo_integration.py
backend/app/services/: __init__.py  codemap_lite_analyzer.py  dashboard.py  github_repo_parser.py  github_repo_tree_fetcher.py  health_checks.py  projects.py  readiness.py  repo_analyses.py  repo_integrations.py  url_validator.py
backend/tests/: conftest.py  test_codemap_lite_analyzer.py  test_cors.py  test_github_repo_parser.py  test_health.py  test_health_check_service.py  test_health_checks.py  test_project_dashboard.py  test_projects.py  test_readiness.py  test_readiness_service.py  test_repo_analyses.py  test_repo_analysis_service.py  test_repo_integration_service.py  test_repo_integrations.py  test_url_validator.py
(+66 files in other folders)
